--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,5 @@
 {
-  "directory": "bower_components"
+  "directory": "bower_components",
+  "proxy": "http://rprman101.alinta.net.int:3128",
+  "https-proxy":"http://rprman101.alinta.net.int:3128"
 }
